--- a/web_scraping_Indeed_Jobs.ipynb
+++ b/web_scraping_Indeed_Jobs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction - Build a Pipeline\n",
+    "# Introduction\n",
     "\n",
     "The project is to build a scraper to extract useful data of the job posts found on www.indeed.com, based on customizable search keyword and location.\n",
     "\n",
@@ -51,7 +51,10 @@
    "source": [
     "# Part 2: Scrape and Parse one Page\n",
     "\n",
-    "Let's start by examining the result page returned by entering keyword \"python\" and loction \"new york\" for search. "
+    "\n",
+    "## Scrape the Page\n",
+    "\n",
+    "Let's start by scraping the first page of the results returned by entering keyword \"python\" and loction \"new york\" for search. "
    ]
   },
   {
@@ -271,6 +274,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Parse the Data\n",
+    "\n",
     "### Job title"
    ]
   },
