--- a/projects/data cleaning and wrangling at old job/website_article_performance_analysis.ipynb
+++ b/projects/data cleaning and wrangling at old job/website_article_performance_analysis.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "The dataset comes from our third party content service provider, it contains the contact information of the user that have read our website articles, as well as their activities on our website.  \n",
     "\n",
-    "In this report, I will summarize the user activities and the articles, the topic and article types that are most popular. "
+    "In this report, I will summarize the user activities and articles read, in order to identify the main areas of interest of the users, as well as the performance of our articles. "
    ]
   },
   {
@@ -473,7 +473,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's wierd that the number of unique articles in unregistered user dataset is much more than the articles we have. Let's see why these articles are not found in `articles` dataset."
+    "It's wierd that the number of unique articles in unregistered user dataset is much more than the articles we have. Let's explore where does this problem come from."
    ]
   },
   {
@@ -502,15 +502,16 @@
     }
    ],
    "source": [
+    "# show article titles that are not found in `aritles` dataset\n",
     "uniqueArticles = pd.Series(unregUsr_dat['Article Title'].unique())\n",
-    "uniqueArticles[~uniqueArticles.isin(articles['Article Title'])].to_list()[:10]"
+    "uniqueArticles[~uniqueArticles.isin(articles['Article Title'])].to_list()[:10] # limit to first 10 results"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's because these records have activity types information prefixed to the article titles."
+    "Now it's clear that the problem arises from activity types information being prefixed to the article titles of these records."
    ]
   },
   {
@@ -519,8 +520,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define a function to find matching article title in 'articles' as a sub string in x \n",
-    "# x refers to the article title in user activities dataset\n",
+    "# Define a function to find matching artile title\n",
+    "# if x contains the article title found in `articles` dataset, add the article title to result list\n",
     "def searchTitle(x, resultlist):\n",
     "    searchResult = [name for name in articles[\"Article Title\"] if str(x).find(str(name)) >= 0]\n",
     "    # if match found\n",
@@ -1572,10 +1573,10 @@
     }
    ],
    "source": [
-    "pivtb = pd.pivot_table(df, values=['Article Title'], index=['Article Type', 'Topic'], \n",
+    "pivot_tb = pd.pivot_table(df, values=['Article Title'], index=['Article Type', 'Topic'], \n",
     "              aggfunc={'Article Title':['nunique', 'count']})\n",
-    "pivtb.columns = ['Clicks', 'Number of Articles']\n",
-    "pivtb"
+    "pivot_tb.columns = ['Clicks', 'Number of Articles']\n",
+    "pivot_tb"
    ]
   }
  ],
